chamber/css/base.css
:root {
  --primary-color: #E5E5E5;
  --secondary-color: #466EC3;
  --accent1-color: #faf9f9;
  --accent2-color: #ebe8e8;
  --primary-dark: #888888;
  --active-link: yellow;
  --main-text:black;
  --primary-boarder: black;

  /* Possible Fonts to use on page */
  --heading-font: "Merriweather", serif;
  /*--heading-font: "Verdana", Geneva, sans-serif;  */
  --paragraph-font: "Georgia", Times;
  --link-font: "Verdana", Geneva, sans-serif;
}

/* relook at thisry-n
body {
  background-color: var(--primary-dark);
} */

h1, h2, h3, h4, h5, h6 {
  font-family: var(--heading-font);
  color: var(--main-text);
}
h1 {
  font-size: 30px;
}
h2 {
  font-size: 22px;
}
h3{
  font-size: 16px;
}

p, a, li, button {
  font-family: var(--paragraph-font);
}

header, main, footer {
  max-width: 560px;
  margin: 0 auto;
  padding: 1%;
  border: 1px solid var(--primary-boarder);
  background-color: var(--primary-dark);
  border-radius: 25px;
}

#chambermeeting {
  display:block;

  margin: 0 auto;
  padding: 0%;
  border: 1px solid var(--primary-boarder);
  background-color: var(--secondary-color);
  border-radius: 25px;
  /*this keeps the text within the boarders*/
  overflow: hidden;

}


#chambermeeting h2, #discoverhead {
  animation: none;
  text-align: center;
}

@keyframes marquee {
  0% {
    transform: translateX(100%)
  }
  100% {
    transform: translateX(-100%);
  }
}

#closems {
  background-color: #1D3461;
}

header {
  margin-top: 1%;
}
footer {
  margin-bottom: 1%;
}

#hamburgernav a{
  display: block;
  background-color: rgba(220, 220, 220, 0.5);
  color: var(--main-text);
  text-decoration: none;
  padding: 1rem;
  border-bottom: 1px solid  rgba(0,0,0,0.5);
  

}

#hamburgernav a:hover {
  background-color: rgba(0,0,0,0.1);
}

#primarynav .activebutton,#hamburgernav .activebutton {
  background-color: var(--accent1-color);
  font-weight: bold;
}

#callToAction a{
  position: absolute;
  align-items: center;
  padding: 0.75rem;
  background-color: rgba(220, 220, 220, 0.5);
  color: var(--main-text);
  text-decoration: none;
  border: 1px solid  rgba(0,0,0,0.5);
  outline: 1px solid var(--secondary-color);
  margin-left: 3rem;
  margin-top: 1rem;
}

#callToAction a:hover{
  background-color: rgba(0,0,0,0.1);
  
}

#callToAction {
  margin-top: 2%;
}

#join a{
  display: block;
  background-color: rgba(220, 220, 220, 0.5);
  color: var(--main-text);
  text-decoration: none;
  border: 1px solid  rgba(0,0,0,0.5);
  outline: 1px solid var(--secondary-color);
}
#join {
  padding: 1rem;
  display: none;
}

#join a h3 {
  margin: 1rem;
  padding: 1rem;
  text-align: center;
}

#join a:hover{
  background-color: rgba(0,0,0,0.1);
}

#join p , #newsReleases p{
  text-align: center;
}


#primarynav, #hamburgernav {
  text-align: center;
  display: none;
  list-style-type: none;
  margin-right: 7%;
  border-top: none;
  border-bottom: none;
  /*border-top: 1px solid rgba(0,0,0,0.5);*/
}



#main_index {
  display: grid;
  gap: 0.5rem;
  grid-template-rows: 0.5fr 0.1fr 0.5fr 0.5fr;
  background-color: var(--accent1-color)
}

.headings {
  text-align: center;
  margin-left: 0.1%;
}
main section, main section div {
  background-color: rgba(0,0,0,0.2);
  border: 1px solid rgba(0,0,0,0.5);

}

#callToAction img {
  width: 100%;
  display: block;

}
#events h3, #weather h3, #newsReleases h3, #spotLightTwo h3, #spotLightOne h3, #spotLightThree h3 {
  background-color: var(--accent2-color);
  margin: 1%;
  border: 1px solid rgba(0,0,0,0.5);
  text-align: center;
  background-color: var(--accent2-color);
  padding: 1rem
  }



#weather div, h4 ,p{
  text-align: center;

}



#weather figure {
  text-align: center;
  color: var(--primary-dark)

}

#events {
  text-align: center;
}

#events img{
  width: 100%;
}




#spotLightOne .sl1image, .sl2image, .sl21image, .sl3image, .newsrelease {
  width: 100%;

}


#threeimagemains {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  margin-bottom: 2%;
}


header div {
  margin-bottom: 1rem;
}

header div {
  display: flex;
  justify-content: space-between;
}



header button {
  color: white;
  font-size: 2rem;
  margin-top: 1.5rem;
  background-color: var(--secondary-color);
  border: 1px solid rgba(0,0,0,0.5);
  width: 3rem;
  height: 3rem;
}

header button:hover {
  background-color: #1D3461;
}

#threeImageMain {
  display: flex;
  gap: 0.25rem;
}
#spotLightTwo {
  display: none;
}


#hamburgernav.open {
  display: block;
}




/* this is for the button open to be the lines closed to have the X */
/*nth-child alows you to access the diffent spans in the html <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button> */
#hamburgerbtn.open span:nth-child(1) {display: none;}
#hamburgerbtn.open span:nth-child(2) {display: block;}
#hamburgerbtn span:nth-child(1) {display: block;}
#hamburgerbtn span:nth-child(2) {display: none;} /* <span>X</span> does not show*/




.logo img {
  width: 10rem;
}

.logo { 
  display: flex;
  align-items: center;
}

.currentdate {
  background-color: var(--accent2-color);
  padding: 1rem;
  border: 1px solid rgba(0,0,0,0.5);
  text-align: center;
}

.social {
  margin-top: 1.5rem;
  display: inline;
}
.social img {
  width: 3rem;
}




.footerbuild {
  display: block;
  margin: 0;
  margin-bottom: 1rem;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: center;
}

.footerbuild a:link {
  color: white;
  background-cgq olor: transparent;
  text-decoration: none;
  font-weight: bold;
  font-size: large;
}

.footerheadings, .footercontact{
  color: white;
  font-weight: bold;
  font-size: large;
}

.footerbuild a:visited {
  color: var(--active-link);
  background-color: transparent;
  text-decoration: none;
}
.footerbuild a:hover {
  background-color: rgba(0,0,0,0.1);
}

.footercontact {
  text-align: center;
  margin-left: 1rem;
  margin-right: 1rem;
}

.footerlogo {
  display: block;
  align-items: center;
  text-align: center;
  margin-bottom: 1rem;
}

.footerheadings {
  display: block;
}
.footerlogo img {
  width: 12.5rem;
}
.footmaps img{
  width: 2rem;
}
.footercontact img{
  width: 2rem;
}

.copyrightupdatesmall, .copyrightupdatemedium, .copyrightupdatelarge{
  display: block;
  text-align: center;
  padding-top: 0.5rem;
  border-top: 1px solid rgba(0,0,0,0.5);
}
.copyrightupdatesmall {
  display: block;
  text-align: center;
}
.copyrightupdatemedium {
  display: none;
  text-align: center;
}
.copyrightupdatelarge {
  display: none;
  text-align: center;
}


/* for the discover page */
/*discover page

.lazypics {
	display: flex;
  align-items: center;
  flex-direction: column;
	gap: 15em;	
}

.lastload {
  margin-bottom: 15%;
}*/


#carnival_dis, #tablemountain_dis, #otter_dis, #ctstadium_dis,#wine_dis {
  display: none;
}


#discovermain img{
  padding: 2%;
  width: 96%;
}

#discovermain h3, #discoverhead h2{
  background-color: var(--accent2-color);
  margin: 1%;
  border: 1px solid rgba(0,0,0,0.5);
  text-align: center;
  background-color: var(--accent2-color);
  padding: 1rem;
  }

.statupdate img {
  background-color: var(--primary-dark);
  width: 96%;
}



#discovermain {
  display: block;
  grid-template-columns: 1fr;

}

#discoverhead {
  border: 1px solid rgba(0,0,0,0.5);
  color: var(--accent1-color);
  padding: 2%;
  border-radius: 25px;
}

/*thankyou page*/

#thankyou {
  display: grid;
  gap: 0.5rem;
  grid-template-rows: 1fr 0.1fr 0.5fr 0.5fr;
  background-color: var(--accent1-color)
}


/*Join Page */



#detailedinformation {
  display: none;
}

#join_head{ /*heading */
  border: 1px solid rgba(0,0,0,0.5);
  color: var(--accent1-color);
  padding: 2%;
  border-radius: 25px;
  text-align: center;
}

form input:required {
  border-left: red solid 10px;
}

#membershipapp {
  padding: 2%;
  display: grid;
  gap: 0.5rem;
  grid-template-columns: 1fr;
  background-color: var(--accent1-color)
}

.information-form legend {
  font-size: 25px;
  text-align: center;
}


.information-form { /* all 3 blocks on the page */
  border: 3px solid var(--primary-dark);
  grid-column: 1;

}

.information-form label{
  display: block;
  padding: 2%;
  font-size: 24px;
}

.membership-form {
	margin-bottom: 2rem;
}

.selection {
  display: grid;
  grid-template-columns: 0.5fr 1fr;
  align-items: center;
}

.information {
  grid-column: 2;
  grid-row: 2;
}

form textarea {
  height: 10rem;
}

.selection input[type="Radio"]  {
  width: 25px;
  height: 25px;
  margin: 1rem;
  align-content: flex-end;
}

.bus-info input[type="text"], .bus-info input[type="textarea"],  .infoform input[type="text"],  .infoform input[type="tel"] ,  .infoform input[type="email"]{
  font-size: 24px;
  width: 96%;
}

.bus-info textarea {
  width: 96%;
}


.legend {
  font-size: 16px;

}
.membership-form label[for="goldm"], label[for="silverm"] {
  color: gold;
  font-weight: bold;
}
.membership-form  label[for="silverm"] {
  color: silver;
}
.membership-form  label[for="bronzem"] {
  color: rgb(176, 141, 87);
  font-weight: bold;
}
.membership-form  label[for="np"] {
  color: var(--secondary-color);
}





/*table on join page */
table {
  letter-spacing: 5px;
  padding: 0%;
  margin: 0px auto;
  padding: 5px;
  box-sizing: border-box;
} 
table, th, td {
  border: 1px solid black;
}
tbody tr:nth-child(1) {
  background-color: gold;
}  
tbody tr:nth-child(4) {
  background-color: silver;
}  
tbody tr:nth-child(7) {
  background-color: rgb(176, 141, 87);
}
tbody tr:nth-child(10) {
  background-color: var(--secondary-color);
}

.detailedinformation li {
  text-align: left;
}


  /*Join.html button */


  .subappBtn {
    padding: 2rem;
    background-color: rgba(220, 220, 220, 0.5);
    color: var(--main-text);
    text-decoration: none;
    border: 1px solid  rgba(0,0,0,0.5);
    outline: 1px solid var(--secondary-color);
    margin-top: 5%;
    margin-left: 10%;
    width: 80%;
  }

  .subappBtnsm {
    padding: 2rem;
    background-color: rgba(220, 220, 220, 0.5);
    color: var(--main-text);
    text-decoration: none;
    border: 1px solid  rgba(0,0,0,0.5);
    outline: 1px solid var(--secondary-color);
    margin-top: 0%;
    margin-left: 28%;
  }
  
/*Directory page */

.businesscards {
  display: block;
  grid-template-columns: 1fr;
  padding-top: 1%;
  padding-bottom: 1%;
}

.businesscards img {
  width: 40%;
  padding: 2%;
  margin-left: 28%;
  display: none;
}

.businesscards section {
  margin: 2%;
  background-color: var(--accent1-color);

}


.businesscards section:hover {
  background-color: var(--accent2-color);
  box-shadow: 0 0 35px var(--primary-dark);
}

.businesscards h3, .businesscards h2{
  background-color: var(--accent2-color);
  margin-left: 14%;
  border: 1px solid rgba(0,0,0,0.5);
  text-align: center;
  background-color: var(--accent2-color);
  padding: 1%;
  width: 70%;
  }
.businesscards p{
  margin: 0%;
  text-align: center;

}

.businesscards .webaddressmargin{
  margin-bottom: 7px;
}



#bdgridbtn{
  padding: 1rem;
  background-color: rgba(220, 220, 220, 0.5);
  color: var(--main-text);
  text-decoration: none;
  border: 1px solid  rgba(0,0,0,0.5);
  outline: 1px solid var(--secondary-color);
  margin: 10px;
}
#bdlistbtn{
  padding: 1rem;
  background-color: rgba(220, 220, 220, 0.5);
  color: var(--main-text);
  text-decoration: none;
  border: 1px solid  rgba(0,0,0,0.5);
  outline: 1px solid var(--secondary-color);
  margin: 10px;
}

#bdgridListBtns {
  text-align: center;
}


/* Business Card List format*/

.businesscardsList {
  grid-template-columns: 1fr;
}

.businesscardsList section{
  display:flex;
  margin: 1% 0%;
  background: var(--accent1-color);
  padding: 10px;
}
.businesscardsList h2{
  font-size: 16px;
  text-align: left;
  width: 10rem;
  margin: 3% 0% 0% 0%;
  
}

.businesscardsList .physicaladdess,.businesscardsList .busindustry,.businesscardsList .physicaladdess, .businesscardsList .membershiplvl, .businesscardsList .webaddress{
  display: none;
}

.businesscardsList img {
  display: none;
}

.businesscardsList p{
  padding: 1% 0.5%;
}

